Bug fix: button icons alignment in ControlUI (#2071)
* Bug fix: button icons alignment in ControlUI

--- a/extensions/ui/org.eclipse.smarthome.ui.paper/web-src/css/components.css
+++ b/extensions/ui/org.eclipse.smarthome.ui.paper/web-src/css/components.css
@@ -932,3 +932,8 @@ md-dialog-content .dayParameter {
 .includeConfig .parameter .hint h6 {
     font-size:10px;
 }
+
+.icontrol .control-button {
+	min-height: 35px;
+	min-width: 35px;
+}
